2006-05-19  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/sysctl1.c: Use CYG_NELEM from infra. 

2006-05-08  Andy Jackson <andy@grapevinetech.co.uk>

	* src/ecos/support.c (cyg_net_show_mbufs): Use %p in diag_printf
	to keep the compiler happy.

2005-10-24  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/sys/param.h: Include <string.h> to stop warnings.

2005-10-23  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/sys/time.h (Removed): Use the isoinfra sys/time.h
	* include/net/if.h: We do need sys/time.h for timeval.
	* src/sys/kern/uipc_socket.c: include sys/time.h for timeval
	* src/sys/kern/uipc_socket2.c: Ditto
	* src/sys/netinet6/in6_pcb.c (in6_pcbdetach): remove lvalue cast
	to keep gcc4.x happy.
	
2005-09-02  Sebastien Couret <sebastien.couret@elios-informatique.fr>

	* src/sys/kern/kern_sysctl.c: Silent compiler warning on lvalue
	assignment

2005-07-29  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/sys/netinet/ip_output.c (ip_output): initialize len to 0.
	* src/sys/net/if.c (ifioctl): Cast to keep compiler happy.
	* src/ecos/support.c (_mask): Use the correct cast to keep the
	compiler happy.
	* include/sys/param.h: give proc0 the correct type so we don't
	have to cast it and avoid a compiler warning.
	* src/sys/kern/uipc_socket.c (soopt_mcopyout): Lefthand casts no
	longer allowed with gcc4. 
	* src/sys/net/if_ethersubr.c (ether_resolvemulti): Cast to keep
	compiler happy.
	* src/sys/net/rtsock.c: Define routedomain consistently to avoid
	compiler warnings.
	
2005-06-23  Gary Thomas  <gary@mlbassoc.com>

	* include/netinet/if_ether.h: Adjust size of struct sockaddr_inarp
	which needs to match struct sockaddr.  This was broken when IPv6
	was added and without this change, ARP can get confused.  Tracked
	down by Arnaud Chataignier <achataignier@neotion.com>

2005-06-17  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/sys/kern/uipc_socket.c (sodealloc): Fixed a race condition
	when freeing the socket memory. Problem reported by Will Lent.
