@@ -1,3 +1,8 @@
+2006-06-14  Andy Jackson <andy@xylanta.com>
+
+	* cdl/freebsd_net.cdl, src/ecos/support.c, src/ecos/support.c:
+	Changes to make stack sizes CDL configurable.
+
 2006-05-19  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* tests/sysctl1.c: Use CYG_NELEM from infra. 
